<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinect2</name>
  <version>0.1.0</version>
  <description>Tools for using Kinect V2 in ROS 2</description>
  <maintainer email="alfi.maulana.f@gmail.com">Alfi Maulana</maintainer>
  <license>MIT License</license>
  <url>https://github.com/threeal/ros2_kinect2</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>libfreenect2-dev</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
